# school_calendar

./: .env.example  .gitignore  AGENT_BRANCH_PR_GUIDE.md  BRANCH_POLICY.md  README.md  main.py  pyproject.toml  school_calendar.example.toml
.plan/: config-file-input-plan.md  google-calendar-creation-plan.md
docs/: streamlit-ui-plan.md
scripts/: run.sh  run_beoncheon.sh  run_streamlit.sh
src/: logging_config.py  main.py
src/calendar/: google_calendar.py  merge_events.py
src/config/: app_config.py  beoncheon_calendar.yml  beoncheon_merge_events.yml  calendar_access.yml  merge_events.yml  parse_schedule.yml  school_calendar.yml  streamlit_schools.yml
src/fetch/: school_schedule.py
src/fetch/output/: school_schedule.html
src/parse/: schedule_parser.py
src/ui/: __init__.py  streamlit_app.py
