[project]
name = "school-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth>=2.40.3",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.1",
    "rich>=14.3.3",
    "loguru>=0.7.3",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
